✅ All Errors Fixed!
Successfully resolved the JavaScript syntax errors that were preventing the page from loading:

Problem: Duplicate HTML template code (145 lines) was accidentally left between the renderTracking() function and attachEvents() function, causing JavaScript parse errors.

Solution:

Created backup: app.js.backup
Removed all duplicate code (lines 545-689)
Restored proper function structure
What's Working Now: ✅ Home page with Gemini cover image ✅ Project page with 15 detailed features ✅ Tracking page with research proposal template ✅ Teams page ✅ Brand page ✅ Teal color scheme throughout ✅ Language toggle (English ↔ Khmer)

Please refresh your browser to see the fully functional portfolio website!

--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Tracking Thesis App</title>
+    <meta name="description" content="MNNPV Research Unit - Technology E-Commerce Platform Project">
+    <title>MNNPV Research Unit</title>
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <!-- Google Sans for technical content -->
+    <link href="https://fonts.googleapis.com/css2?family=Product+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- Fallback to similar Google font (Product Sans not publicly available, using Inter as alternative) -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700;800&family=JetBrains+Mono:wght@400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;700&display=swap"
         rel="stylesheet">
+
+    <!-- Khmer Siem Reap font -->
+    <link href="https://fonts.googleapis.com/css2?family=Siemreap&display=swap" rel="stylesheet">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/styles.css">
